--- a/Current datasets.ipynb
+++ b/Current datasets.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "61ad0ee6",
    "metadata": {},
    "outputs": [
@@ -154,28 +154,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            X          Y  objectid                     name  licensed_beds   \n",
-       "0 -157.757104  21.381406         1  ADVENTIST HEALTH CASTLE            160  \\\n",
+       "            X          Y  objectid                     name  licensed_beds  \\\n",
+       "0 -157.757104  21.381406         1  ADVENTIST HEALTH CASTLE            160   \n",
        "1 -155.470496  20.076394         2      HALE HO’OLA HAMAKUA             11   \n",
        "2 -157.810021  21.409491         3    HAWAII STATE HOSPITAL            202   \n",
        "\n",
-       "   island                                mailing_address   \n",
-       "0    OAHU     640 Ulukahiki Street, Kailua, Hawaii 96734  \\\n",
+       "   island                                mailing_address  \\\n",
+       "0    OAHU     640 Ulukahiki Street, Kailua, Hawaii 96734   \n",
        "1  HAWAII  45-547 Plumeria Street, Honokaa, Hawaii 96727   \n",
        "2    OAHU   45-710 Keaahala Road, Kaneohe, Hawaii  96744   \n",
        "\n",
-       "                                physical_address           phone  alt_phone   \n",
-       "0     640 Ulukahiki Street, Kailua, Hawaii 96734  (808) 263-5500        NaN  \\\n",
+       "                                physical_address           phone  alt_phone  \\\n",
+       "0     640 Ulukahiki Street, Kailua, Hawaii 96734  (808) 263-5500        NaN   \n",
        "1  45-547 Plumeria Street, Honokaa, Hawaii 96727  (808) 932-4100        NaN   \n",
        "2   45-710 Keaahala Road, Kaneohe, Hawaii  96744  (808) 247-2191        NaN   \n",
        "\n",
-       "              fax                                             poc   \n",
-       "0  (808) 263-5123                    Kathy Raethel, President/CEO  \\\n",
+       "              fax                                             poc  \\\n",
+       "0  (808) 263-5123                    Kathy Raethel, President/CEO   \n",
        "1  (808) 775-9977                David A. Culbreth, Administrator   \n",
        "2  (808) 247-7335  Run F. Heidelberg, DNP, APRN-RX, Administrator   \n",
        "\n",
-       "                                   website accred_status cert_status   \n",
-       "0  https://www.adventisthealth.org/castle/           TJC           X  \\\n",
+       "                                   website accred_status cert_status  \\\n",
+       "0  https://www.adventisthealth.org/castle/           TJC           X   \n",
        "1        https://www.halehoolahamakua.org/           NaN           X   \n",
        "2               https://health.hawaii.gov/           TJC         NaN   \n",
        "\n",
@@ -185,7 +185,7 @@
        "2                  NaN           NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,13 +198,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "2d1a6d4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "16d731b1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# geojson    \n",
-    "\n"
+    "\n",
+    "df = gpd.read_file(\"data/hospitals/Hospitals.geojson\")\n",
+    "df.head"
    ]
   },
   {
@@ -234,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
